syntax = "proto3";

package message;

option go_package = "/protocol_buffers";


message Message{
  int32 message_id = 1;
  string sender_id = 2;
  string receiver_id = 3;
  string message = 4;
}
