syntax = "proto3";


package user;


option go_package = "/protocol_buffers";


message User{
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;

  Date dob = 5;
}

message Date {
  int32 day = 1;
  int32 month = 2;
  int32 year = 3;
}
